<resources>
    <string name="app_name">BeautyMaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="appointmentBtn">Записатися</string>
    <string name="procedureAppointment">Запис на процедуру</string>
    <string name="clientName">Ім\'я</string>
    <string name="phoneNumberHint">Номер телефону</string>
    <string name="emailHint">E-mail</string>
    <string name="dateTimeHint">Бажана дата та час</string>
    <string name="commentHint">Коментар</string>
    <string name="eyebrow_modeling_description_text">Моделювання брів - це косметична процедура, яка спрямована на зміну їх форми. Ця процедура допоможе вам зробити ваш вигляд більш виразним та ефектним. При моделюванні потрібно враховувати форму обличчя, розріз очей, зростання волосків, зачіску, сучасні модні тенденції.</string>
    <string name="eyelash_lamination_description_text">Ламінування вій - техніка в косметології, яка застосовує нанесення шарів кератину, фарби, вітамінізуючих компонентів, і т. ін. для збільшення об\'єму, додавання блиску, вигину та довжини віям. Дана процедура підійде для тих, хто любить натуральність.</string>
    <string name="eyelash_extension_description_text">Нарощування вій - це сучасна процедура в косметології, яка дозволяє значно збільшити довжину, об\'єм вій, форму вій. За допомогою нарощування вій можна досягнути ефекту більш виразного погляду, так званого, лялькового погляду, та багато інших ефектів.</string>
    <string name="creator_phone_number">0508162700</string>
    <string name="creator_name">Холодько Оксана</string>
    <string name="dialog_title">Зберегти дані?</string>
</resources>