<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragment.AppointmentFragment">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAppointmentName"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"
                android:text="@string/procedureAppointment"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/evClientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/clientName" />

            <EditText
                android:id="@+id/evPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phoneNumberHint" />

            <EditText
                android:id="@+id/evEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/emailHint" />

            <EditText
                android:id="@+id/evDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/dateTimeHint" />

            <EditText
                android:id="@+id/evComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/commentHint" />

            <Button
                android:id="@+id/btnCompleteFormFilling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointmentBtn" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>